fix for nginx deployment spec to address errors when running against latest minikube using k8s 1.17

--- a/kubernetes/example-nginx-deployment.yaml
+++ b/kubernetes/example-nginx-deployment.yaml
@@ -43,11 +43,16 @@ data:
     }
 
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx
+  labels:
+    app: nginx
 spec:
+  selector:
+    matchLabels:
+      app: nginx
   replicas: 2
   template:
     metadata:
