fix for check argument set port with -p

--- a/sensu/check-nginx.yaml
+++ b/sensu/check-nginx.yaml
@@ -4,7 +4,7 @@ api_version: core/v2
 metadata:
   name: check-nginx
 spec:
-  command: check_http -H 127.0.0.1 -u / -P 80 -N
+  command: check_http -H 127.0.0.1 -u / -p 80 -N
   runtime_assets:
   - sensu/monitoring-plugins
   publish: true
