--- a/kubernetes/sensu-backend.yaml
+++ b/kubernetes/sensu-backend.yaml
@@ -2,11 +2,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sensu
-  namespace: sensu-system
+  name: sensu-etcd
 spec:
   selector:
-    app: sensu
+    app: sensu-etcd
   clusterIP: None
   ports:
   - name: sensu-etcd-client
@@ -19,7 +18,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: sensu-lb
-  namespace: sensu-system
 spec:
   selector:
     app: sensu
@@ -42,20 +40,20 @@ spec:
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: sensu-backend
-  namespace: sensu-system
+  name: sensu-etcd
 spec:
   selector:
     matchLabels:
-      app: sensu
-  serviceName: sensu
-  replicas: 3
+      app: sensu-etcd
+  serviceName: sensu-etcd
+  replicas: 1
   updateStrategy:
     type: RollingUpdate
   volumeClaimTemplates:
   - metadata:
-      name: sensu-backend-etcd
+      name: sensu-etcd
     spec:
+      # storageClassName: faster 
       accessModes:
         - "ReadWriteOnce"
       resources:
@@ -64,43 +62,154 @@ spec:
   template:
     metadata:
       labels:
-        app: sensu
+        app: sensu-etcd
     spec:
+      terminationGracePeriodSeconds: 60
       volumes:
-      - name: sensu-backend-etcd
+      - name: sensu-etcd
         persistentVolumeClaim:
-          claimName: sensu-backend-etcd
-      - name: sensu-asset-server-ca-cert
-        secret:
-          secretName: sensu-asset-server-ca-cert
-          defaultMode: 256
-          optional: true
+          claimName: sensu-etcd
       containers:
-      - name: sensu-backend
-        image: sensu/sensu:5.16.1
+      - name: etcd
+        image: gcr.io/etcd-development/etcd:v3.3.22
         command: [
-          "sensu-backend", "start",
-          "--log-level=debug",
-          "--cache-dir=/var/cache/sensu/sensu-backend",
-          "--state-dir=/var/lib/sensu",
-          "--etcd-name", "$(POD_NAME)",
-          "--etcd-initial-advertise-peer-urls", "http://$(POD_NAME).sensu.sensu-system.svc.cluster.local:2380",
-          "--etcd-advertise-client-urls", "http://$(POD_NAME).sensu.sensu-system.svc.cluster.local:2379",
-          "--etcd-listen-peer-urls", "http://0.0.0.0:2380",
-          "--etcd-listen-client-urls", "http://0.0.0.0:2379",
-          "--etcd-initial-cluster-token", "",
-          "--etcd-initial-cluster-state", "new",
-          "--etcd-initial-cluster", "sensu-backend-0=http://sensu-backend-0.sensu.sensu-system.svc.cluster.local:2380,sensu-backend-1=http://sensu-backend-1.sensu.sensu-system.svc.cluster.local:2380,sensu-backend-2=http://sensu-backend-2.sensu.sensu-system.svc.cluster.local:2380"
+          "/usr/local/bin/etcd",
+          "--data-dir", "/var/lib/etcd",
+          "--initial-cluster-state", "new",
+          "--name", "$(ETCD_NAME)",
+          "--listen-client-urls", "http://0.0.0.0:2379",
+          "--advertise-client-urls", "http://$(ETCD_NAME):2379",
         ]
         env:
+        - name: KUBE_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
+        - name: ETCD_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.name
+        volumeMounts:
+        - name: sensu-etcd
+          mountPath: /var/lib/etcd
+        ports:
+        - protocol: TCP
+          containerPort: 2379
+        - protocol: TCP
+          containerPort: 2380
+        resources:
+          requests:
+            memory: 2048M
+            cpu: 1.0
+          limits:
+            memory: 4096M
+            cpu: 2.0
+        readinessProbe:
+          initialDelaySeconds: 5
+          periodSeconds: 5
+          exec:
+            command:
+            - wget 
+            - --no-check-certificate
+            - -q
+            - -O-
+            - http://127.0.0.1:2379/health
+
+      - name: sensu-agent
+        image: sensu/sensu:6.2.5
+        command: [
+          "/opt/sensu/bin/sensu-agent", "start", 
+          "--log-level", "warn",
+        ]
+        env:
+        - name: KUBE_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
+        - name: SENSU_BACKEND_URL
+          value: "ws://sensu-backend-0.sensu.$(KUBE_NAMESPACE).svc.cluster.local:8081 ws://sensu-backend-1.sensu.$(KUBE_NAMESPACE).svc.cluster.local:8081 ws://sensu-backend-2.sensu.$(KUBE_NAMESPACE).svc.cluster.local:8081"
+        - name: SENSU_NAMESPACE
+          value: "sensu-system"
+        - name: SENSU_SUBSCRIPTIONS
+          value: "sensu-backend kubernetes"
+        - name: SENSU_DETECT_CLOUD_PROVIDER
+          value: "true"
+        - name: SENSU_KEEPALIVE_INTERVAL
+          value: "5"
+        - name: SENSU_KEEPALIVE_WARNING_TIMEOUT
+          value: "10"
+        - name: SENSU_DEREGISTER
+          value: "true"
+        - name: SENSU_DEREGISTRATION_HANDLER
+          value: "deregister"
+        - name: SENSU_API_HOST
+          value: "127.0.0.1"
+        - name: SENSU_API_PORT
+          value: "3031"
+        - name: SENSU_STATSD_METRICS_HOST
+          value: "127.0.0.1"
+        - name: SENSU_STATSD_METRICS_PORT
+          value: "8125"
+        - name: SENSU_STATSD_FLUSH_INTERVAL
+          value: "10"
+        - name: SENSU_STATSD_EVENT_HANDLERS
+          value: "statsd"
+        volumeMounts: []
+        ports: []
+
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: sensu-backend
+spec:
+  selector:
+    matchLabels:
+      app: sensu
+  serviceName: sensu
+  replicas: 3
+  updateStrategy:
+    type: RollingUpdate
+  template:
+    metadata:
+      labels:
+        app: sensu
+    spec:
+      volumes: []
+      initContainers:
+      - name: wait-for-etcd
+        image: busybox:latest
+        command: [
+          "sh",
+          "-c",
+          "until nslookup sensu-etcd-0.sensu-etcd.$(KUBE_NAMESPACE).svc.cluster.local; do echo waiting for sensu-etcd-0.sensu-etcd.$(KUBE_NAMESPACE).svc.cluster.local; sleep 2; done",
+        ]
+        env:
+        - name: KUBE_NAMESPACE
+          valueFrom: 
+            fieldRef: 
+              fieldPath: metadata.namespace
+      containers:
+      - name: sensu-backend
+        image: sensu/sensu:6.2.5
+        command: [
+          "/opt/sensu/bin/sensu-backend", "start",
+          "--log-level", "debug",
+          "--debug", "true",
+          "--no-embed-etcd",
+          "--etcd-client-urls", "http://sensu-etcd-0.sensu-etcd.$(KUBE_NAMESPACE).svc.cluster.local:2379",
+          "--etcd-name", "sensu-etcd-0.sensu-etcd.$(KUBE_NAMESPACE).svc.cluster.local",
+        ]
+        env:
+        - name: KUBE_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
         - name: POD_NAME
           valueFrom:
             fieldRef:
               fieldPath: metadata.name
-        - name: SENSU_BACKEND_CLUSTER_ADMIN_USERNAME
-          value: admin
-        - name: SENSU_BACKEND_CLUSTER_ADMIN_PASSWORD
-          value: P@ssw0rd!
+        volumeMounts: []
         ports:
         - protocol: TCP
           containerPort: 8080
@@ -108,49 +217,97 @@ spec:
           containerPort: 8081
         - protocol: TCP
           containerPort: 3000
-        volumeMounts:
-        - name: sensu-backend-etcd
-          mountPath: /var/lib/sensu/etcd
-        - name: sensu-asset-server-ca-cert
-          mountPath: /etc/pki/ca-trust/source/anchors/sensu-ca-cert.pem # centos
-          subPath: sensu-ca-cert
-        - name: sensu-asset-server-ca-cert
-          mountPath: /usr/local/share/ca-certificates/sensu-ca-cert.crt # alpine/debian
-          subPath: sensu-ca-cert
         resources:
           requests:
-            memory: 1024M
-            cpu: 0.3
-          limits:
             memory: 2048M
             cpu: 1.0
+          limits:
+            memory: 4096M
+            cpu: 2.0
+        # readinessProbe:
+        #   initialDelaySeconds: 5
+        #   periodSeconds: 5
+        #   exec:
+        #     command:
+        #     - wget 
+        #     - --no-check-certificate
+        #     - -q
+        #     - -O-
+        #     - https://127.0.0.1:8080/health
 
       - name: sensu-agent
-        image: sensu/sensu:5.16.1
-        command: ["/opt/sensu/bin/sensu-agent", "start", "--log-level=debug", "--insecure-skip-tls-verify"]
+        image: sensu/sensu:6.2.5
+        command: [
+          "/opt/sensu/bin/sensu-agent", "start", 
+          "--detect-cloud-provider", "true",
+          "--log-level", "warn", 
+        ]
         env:
+        - name: KUBE_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
         - name: SENSU_BACKEND_URL
-          value: ws://sensu-backend-0.sensu.sensu-system.svc.cluster.local:8081 ws://sensu-backend-1.sensu.sensu-system.svc.cluster.local:8081 ws://sensu-backend-2.sensu.sensu-system.svc.cluster.local:8081
+          value: "ws://sensu-backend-0.sensu.$(KUBE_NAMESPACE).svc.cluster.local:8081 ws://sensu-backend-1.sensu.$(KUBE_NAMESPACE).svc.cluster.local:8081 ws://sensu-backend-2.sensu.$(KUBE_NAMESPACE).svc.cluster.local:8081"
         - name: SENSU_NAMESPACE
-          value: sensu-system
+          value: "sensu-system"
         - name: SENSU_SUBSCRIPTIONS
-          value: linux kubernetes sensu-backend
+          value: "sensu-backend kubernetes"
         - name: SENSU_KEEPALIVE_INTERVAL
           value: "5"
         - name: SENSU_KEEPALIVE_WARNING_TIMEOUT
           value: "10"
-        - name: SENSU_KEEPALIVE_CRITICAL_TIMEOUT
-          value: "60"
         - name: SENSU_DEREGISTER
           value: "true"
+        - name: SENSU_DEREGISTRATION_HANDLER
+          value: "deregister"
+        - name: SENSU_API_HOST
+          value: "127.0.0.1"
+        - name: SENSU_API_PORT
+          value: "3031"
+        - name: SENSU_STATSD_METRICS_HOST
+          value: "127.0.0.1"
+        - name: SENSU_STATSD_METRICS_PORT
+          value: "8125"
+        - name: SENSU_STATSD_FLUSH_INTERVAL
+          value: "10"
         - name: SENSU_STATSD_EVENT_HANDLERS
-          value: statsd
-        volumeMounts:
-        - name: sensu-backend-etcd
-          mountPath: /var/lib/sensu/etcd
-        - name: sensu-asset-server-ca-cert
-          mountPath: /etc/pki/ca-trust/source/anchors/sensu-ca-cert.pem # centos
-          subPath: sensu-ca-cert
-        - name: sensu-asset-server-ca-cert
-          mountPath: /usr/local/share/ca-certificates/sensu-ca-cert.crt # alpine/debian
-          subPath: sensu-ca-cert
+          value: "statsd"
+        volumeMounts: []
+        ports: []
+
+---
+apiVersion: batch/v1
+kind: Job
+metadata:
+  name: sensu-backend-init
+spec:
+  parallelism: 1
+  completions: 1
+  backoffLimit: 5
+  template:
+    spec:
+      activeDeadlineSeconds: 60
+      containers:
+      - name: sensu-backend-init
+        image: sensu/sensu:6.2.5
+        command: [
+          "/opt/sensu/bin/sensu-backend", "init",
+          "--etcd-client-urls", "http://sensu-etcd-0.sensu-etcd.$(KUBE_NAMESPACE).svc.cluster.local:2379",
+          # "/bin/sh", 
+          # "-c", 
+          # "sleep 30 && sensu-backend init --etcd-client-urls=http://sensu-etcd-0.sensu-etcd.$(KUBE_NAMESPACE).svc.cluster.local:2379",
+        ]
+        env:
+        - name: KUBE_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
+        - name: SENSU_BACKEND_CLUSTER_ADMIN_USERNAME
+          value: sensu
+        - name: SENSU_BACKEND_CLUSTER_ADMIN_PASSWORD
+          value: sensu
+        volumeMounts: []
+        ports: []
+      restartPolicy: Never
+
