--- a/kubernetes/sensu-backend.yaml
+++ b/kubernetes/sensu-backend.yaml
@@ -1,4 +1,5 @@
 ---
+# headless service for sensu-etcd statefulset DNS
 apiVersion: v1
 kind: Service
 metadata:
@@ -9,11 +10,26 @@ spec:
   clusterIP: None
   ports:
   - name: sensu-etcd-client
+    protocol: TCP
     port: 2379
   - name: sensu-etcd-server
+    protocol: TCP
     port: 2380
 
 ---
+# headless service for sensu-backend statefulset DNS
+apiVersion: v1
+kind: Service
+metadata:
+  name: sensu
+spec:
+  selector:
+    app: sensu
+  clusterIP: None
+  ports: []
+    
+---
+# load balancer for sensu-backends (web + API + transport)
 apiVersion: v1
 kind: Service
 metadata:
