add sensu-backend init container

--- a/kubernetes/sensu-backend.yaml
+++ b/kubernetes/sensu-backend.yaml
@@ -217,6 +217,23 @@ spec:
           valueFrom: 
             fieldRef: 
               fieldPath: metadata.namespace
+      initContainers:
+      - name: wait-for-etcd
+        image: tutum/dnsutils:latest
+        command: [
+          "/bin/sh", 
+          "-c",
+          "export READY=1 && while [ $READY -gt 0 ]; do host $(TARGET_DNS); READY=$?; sleep 2; done;",
+        ]
+        env: 
+        - name: KUBE_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
+        - name: TARGET_DNS
+          value: "sensu-etcd-0.sensu-etcd.$(KUBE_NAMESPACE).svc.cluster.local"
+        ports: []
+        volumeMounts: []
       containers:
       - name: sensu-backend
         image: sensu/sensu:6.2.5
